--- a/contrib/other-builds/search/.project
+++ b/contrib/other-builds/search/.project
@@ -92,6 +92,11 @@
 			<locationURI>PARENT-3-PROJECT_LOC/search/applied.hh</locationURI>
 		</link>
 		<link>
+			<name>bin</name>
+			<type>2</type>
+			<locationURI>virtual:/virtual</locationURI>
+		</link>
+		<link>
 			<name>config.hh</name>
 			<type>1</type>
 			<locationURI>PARENT-3-PROJECT_LOC/search/config.hh</locationURI>
@@ -157,14 +162,59 @@
 			<locationURI>PARENT-3-PROJECT_LOC/search/vertex.hh</locationURI>
 		</link>
 		<link>
-			<name>vertex_generator.cc</name>
-			<type>1</type>
-			<locationURI>PARENT-3-PROJECT_LOC/search/vertex_generator.cc</locationURI>
-		</link>
-		<link>
 			<name>vertex_generator.hh</name>
 			<type>1</type>
 			<locationURI>PARENT-3-PROJECT_LOC/search/vertex_generator.hh</locationURI>
+		</link>
+		<link>
+			<name>bin/gcc-4.5</name>
+			<type>2</type>
+			<locationURI>virtual:/virtual</locationURI>
+		</link>
+		<link>
+			<name>bin/gcc-4.5/release</name>
+			<type>2</type>
+			<locationURI>virtual:/virtual</locationURI>
+		</link>
+		<link>
+			<name>bin/gcc-4.5/release/debug-symbols-on</name>
+			<type>2</type>
+			<locationURI>virtual:/virtual</locationURI>
+		</link>
+		<link>
+			<name>bin/gcc-4.5/release/debug-symbols-on/link-static</name>
+			<type>2</type>
+			<locationURI>virtual:/virtual</locationURI>
+		</link>
+		<link>
+			<name>bin/gcc-4.5/release/debug-symbols-on/link-static/threading-multi</name>
+			<type>2</type>
+			<locationURI>virtual:/virtual</locationURI>
+		</link>
+		<link>
+			<name>bin/gcc-4.5/release/debug-symbols-on/link-static/threading-multi/edge_generator.o</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/search/bin/gcc-4.5/release/debug-symbols-on/link-static/threading-multi/edge_generator.o</locationURI>
+		</link>
+		<link>
+			<name>bin/gcc-4.5/release/debug-symbols-on/link-static/threading-multi/nbest.o</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/search/bin/gcc-4.5/release/debug-symbols-on/link-static/threading-multi/nbest.o</locationURI>
+		</link>
+		<link>
+			<name>bin/gcc-4.5/release/debug-symbols-on/link-static/threading-multi/rule.o</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/search/bin/gcc-4.5/release/debug-symbols-on/link-static/threading-multi/rule.o</locationURI>
+		</link>
+		<link>
+			<name>bin/gcc-4.5/release/debug-symbols-on/link-static/threading-multi/vertex.o</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/search/bin/gcc-4.5/release/debug-symbols-on/link-static/threading-multi/vertex.o</locationURI>
+		</link>
+		<link>
+			<name>bin/gcc-4.5/release/debug-symbols-on/link-static/threading-multi/vertex_generator.o</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/search/bin/gcc-4.5/release/debug-symbols-on/link-static/threading-multi/vertex_generator.o</locationURI>
 		</link>
 	</linkedResources>
 </projectDescription>
