--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "contrib/arrow-pipelines/python/libs/pypeline"]
-	path = contrib/arrow-pipelines/python/libs/pypeline
-	url = git://github.com/ianj-als/pypeline.git
+[submodule "contrib/arrow-pipelines/python/pcl"]
+	path = contrib/arrow-pipelines/python/pcl
+	url = git://github.com/ianj-als/pcl.git
