--- a/contrib/other-builds/moses/.project
+++ b/contrib/other-builds/moses/.project
@@ -432,6 +432,26 @@
 			<locationURI>PARENT-3-PROJECT_LOC/moses/HypothesisStackNormal.h</locationURI>
 		</link>
 		<link>
+			<name>IOWrapper.cpp</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/IOWrapper.cpp</locationURI>
+		</link>
+		<link>
+			<name>IOWrapper.h</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/IOWrapper.h</locationURI>
+		</link>
+		<link>
+			<name>IOWrapperChart.cpp</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/IOWrapperChart.cpp</locationURI>
+		</link>
+		<link>
+			<name>IOWrapperChart.h</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/IOWrapperChart.h</locationURI>
+		</link>
+		<link>
 			<name>Incremental.cpp</name>
 			<type>1</type>
 			<locationURI>PARENT-3-PROJECT_LOC/moses/Incremental.cpp</locationURI>
