--- a/contrib/other-builds/moses/.project
+++ b/contrib/other-builds/moses/.project
@@ -917,6 +917,26 @@
 			<locationURI>PARENT-3-PROJECT_LOC/moses/TranslationOptionList.h</locationURI>
 		</link>
 		<link>
+			<name>TranslationTask.cpp</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/TranslationTask.cpp</locationURI>
+		</link>
+		<link>
+			<name>TranslationTask.h</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/TranslationTask.h</locationURI>
+		</link>
+		<link>
+			<name>TranslationTaskChart.cpp</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/TranslationTaskChart.cpp</locationURI>
+		</link>
+		<link>
+			<name>TranslationTaskChart.h</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/TranslationTaskChart.h</locationURI>
+		</link>
+		<link>
 			<name>TreeInput.cpp</name>
 			<type>1</type>
 			<locationURI>PARENT-3-PROJECT_LOC/moses/TreeInput.cpp</locationURI>
