--- a/contrib/sigtest-filter/Makefile
+++ b/contrib/sigtest-filter/Makefile
@@ -3,8 +3,12 @@ FLAVOR?=o64
 INC=-I$(SALMDIR)/Src/Shared -I$(SALMDIR)/Src/SuffixArrayApplications -I$(SALMDIR)/Src/SuffixArrayApplications/SuffixArraySearch
 OBJS=$(SALMDIR)/Distribution/Linux/Objs/Search/_SuffixArrayApplicationBase.$(FLAVOR) $(SALMDIR)/Distribution/Linux/Objs/Search/_SuffixArraySearchApplicationBase.$(FLAVOR) $(SALMDIR)/Distribution/Linux/Objs/Shared/_String.$(FLAVOR) $(SALMDIR)/Distribution/Linux/Objs/Shared/_IDVocabulary.$(FLAVOR)
 
-all: filter-pt
+all: filter-pt filter-pt-mt
 
 filter-pt: filter-pt.cpp
 	./check-install $(SALMDIR)
 	$(CXX) -O6 $(INC) $(OBJS) -o filter-pt filter-pt.cpp
+
+filter-pt-mt: filter-pt-mt.cpp
+	./check-install $(SALMDIR)
+	$(CXX) -O6 $(INC) $(OBJS) -o filter-pt-mt filter-pt-mt.cpp -lboost_thread
